pkg/tests/testthat/errors/mdl/include2.mdl
ident b = 1;  

#include "incl2.mdl"

ident b = 2;
